--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -8,7 +8,7 @@
 <widget class="GnomeApp" id="app1">
   <property name="height_request">480</property>
   <property name="visible">True</property>
-  <property name="title" translatable="yes">ChronoJump</property>
+  <property name="title" translatable="no">ChronoJump</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
@@ -48,7 +48,7 @@
 			<widget class="GtkImageMenuItem" id="new1">
 			  <property name="visible">True</property>
 			  <property name="stock_item">GNOMEUIINFO_MENU_NEW_ITEM</property>
-			  <property name="label" translatable="yes">_Nueva sesión</property>
+			  <property name="label" translatable="yes">_New session</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="on_new_activate" last_modification_time="Wed, 22 Sep 2004 23:55:11 GMT"/>
 			</widget>
@@ -57,7 +57,7 @@
 		      <child>
 			<widget class="GtkImageMenuItem" id="open1">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">_Abrir sesión</property>
+			  <property name="label" translatable="yes">_Load sesion</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="on_open_activate" last_modification_time="Wed, 22 Sep 2004 23:55:11 GMT"/>
 
@@ -188,7 +188,7 @@
 		      <child>
 			<widget class="GtkMenuItem" id="sj">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">SJ</property>
+			  <property name="label" translatable="no">SJ</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="on_normal_jump_activate" last_modification_time="Sat, 02 Oct 2004 20:23:20 GMT"/>
 			</widget>
@@ -197,7 +197,7 @@
 		      <child>
 			<widget class="GtkMenuItem" id="sj_plus">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">SJ+</property>
+			  <property name="label" translatable="no">SJ+</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="on_sj_plus_activate" last_modification_time="Tue, 12 Oct 2004 20:04:21 GMT"/>
 			</widget>
@@ -206,7 +206,7 @@
 		      <child>
 			<widget class="GtkMenuItem" id="cmj">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">CMJ</property>
+			  <property name="label" translatable="no">CMJ</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="on_normal_jump_activate" last_modification_time="Sat, 02 Oct 2004 20:23:30 GMT"/>
 			</widget>
@@ -215,7 +215,7 @@
 		      <child>
 			<widget class="GtkMenuItem" id="abk">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">ABK</property>
+			  <property name="label" translatable="no">ABK</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="on_normal_jump_activate" last_modification_time="Sat, 02 Oct 2004 20:26:59 GMT"/>
 			</widget>
@@ -224,7 +224,7 @@
 		      <child>
 			<widget class="GtkMenuItem" id="dj">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">DJ</property>
+			  <property name="label" translatable="no">DJ</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="on_dj_activate" last_modification_time="Wed, 22 Sep 2004 23:57:11 GMT"/>
 			</widget>
@@ -233,7 +233,7 @@
 		      <child>
 			<widget class="GtkMenuItem" id="rj">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">RJ</property>
+			  <property name="label" translatable="no">RJ</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="on_rj_activate" last_modification_time="Wed, 22 Sep 2004 23:57:11 GMT"/>
 			</widget>
@@ -384,7 +384,7 @@
 	      <child>
 		<widget class="GtkMenuItem" id="stats">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">_Stats</property>
+		  <property name="label" translatable="yes">_Statistics</property>
 		  <property name="use_underline">True</property>
 
 		  <child>
@@ -483,7 +483,7 @@
 	      <child>
 		<widget class="GtkButton" id="button_last_jump_delete">
 		  <property name="visible">True</property>
-		  <property name="tooltip" translatable="yes">borrar último salto</property>
+		  <property name="tooltip" translatable="yes">delete last jump</property>
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="focus_on_click">True</property>
@@ -642,7 +642,7 @@
 		      <child>
 			<widget class="GtkButton" id="button_recup_per">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Recuperar sujeto</property>
+			  <property name="tooltip" translatable="yes">Load jumper</property>
 			  <property name="can_default">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
@@ -719,7 +719,7 @@
 		      <child>
 			<widget class="GtkButton" id="button_create_per">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">crear sujeto</property>
+			  <property name="tooltip" translatable="yes">New jumper</property>
 			  <property name="can_default">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
@@ -834,7 +834,7 @@
 		      <child>
 			<widget class="GtkButton" id="button_edit_current_person">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Editar salto seleccionado</property>
+			  <property name="tooltip" translatable="yes">Edit selected jump</property>
 			  <property name="can_focus">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
@@ -907,7 +907,7 @@
 	      <child>
 		<widget class="GtkLabel" id="label68">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">&lt;b&gt;sujetos&lt;/b&gt;</property>
+		  <property name="label" translatable="yes">&lt;b&gt;jumpers&lt;/b&gt;</property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">True</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1071,7 +1071,7 @@
 						    <widget class="GtkButton" id="button_sj">
 						      <property name="visible">True</property>
 						      <property name="can_focus">True</property>
-						      <property name="label" translatable="yes">SJ</property>
+						      <property name="label" translatable="no">SJ</property>
 						      <property name="use_underline">True</property>
 						      <property name="relief">GTK_RELIEF_NORMAL</property>
 						      <property name="focus_on_click">True</property>
@@ -1088,7 +1088,7 @@
 						    <widget class="GtkButton" id="button_sj_plus">
 						      <property name="visible">True</property>
 						      <property name="can_focus">True</property>
-						      <property name="label" translatable="yes">SJ+</property>
+						      <property name="label" translatable="no">SJ+</property>
 						      <property name="use_underline">True</property>
 						      <property name="relief">GTK_RELIEF_NORMAL</property>
 						      <property name="focus_on_click">True</property>
@@ -1105,7 +1105,7 @@
 						    <widget class="GtkButton" id="button_cmj">
 						      <property name="visible">True</property>
 						      <property name="can_focus">True</property>
-						      <property name="label" translatable="yes">CMJ</property>
+						      <property name="label" translatable="no">CMJ</property>
 						      <property name="use_underline">True</property>
 						      <property name="relief">GTK_RELIEF_NORMAL</property>
 						      <property name="focus_on_click">True</property>
@@ -1122,7 +1122,7 @@
 						    <widget class="GtkButton" id="button_abk">
 						      <property name="visible">True</property>
 						      <property name="can_focus">True</property>
-						      <property name="label" translatable="yes">ABK</property>
+						      <property name="label" translatable="no">ABK</property>
 						      <property name="use_underline">True</property>
 						      <property name="relief">GTK_RELIEF_NORMAL</property>
 						      <property name="focus_on_click">True</property>
@@ -1139,7 +1139,7 @@
 						    <widget class="GtkButton" id="button_dj">
 						      <property name="visible">True</property>
 						      <property name="can_focus">True</property>
-						      <property name="label" translatable="yes">DJ</property>
+						      <property name="label" translatable="no">DJ</property>
 						      <property name="use_underline">True</property>
 						      <property name="relief">GTK_RELIEF_NORMAL</property>
 						      <property name="focus_on_click">True</property>
@@ -1155,7 +1155,7 @@
 						  <child>
 						    <widget class="GtkButton" id="button_edit_selected_jump">
 						      <property name="visible">True</property>
-						      <property name="tooltip" translatable="yes">Editar salto seleccionado</property>
+						      <property name="tooltip" translatable="yes">Edit selected jump</property>
 						      <property name="can_focus">True</property>
 						      <property name="relief">GTK_RELIEF_NORMAL</property>
 						      <property name="focus_on_click">True</property>
@@ -1183,7 +1183,7 @@
 						  <child>
 						    <widget class="GtkButton" id="button_delete_selected_jump">
 						      <property name="visible">True</property>
-						      <property name="tooltip" translatable="yes">Borrar salto seleccionado</property>
+						      <property name="tooltip" translatable="yes">Delete selected jump</property>
 						      <property name="can_focus">True</property>
 						      <property name="relief">GTK_RELIEF_NORMAL</property>
 						      <property name="focus_on_click">True</property>
@@ -1301,7 +1301,7 @@
 						    <widget class="GtkButton" id="button_rj">
 						      <property name="visible">True</property>
 						      <property name="can_focus">True</property>
-						      <property name="label" translatable="yes">RJ</property>
+						      <property name="label" translatable="no">RJ</property>
 						      <property name="use_underline">True</property>
 						      <property name="relief">GTK_RELIEF_NORMAL</property>
 						      <property name="focus_on_click">True</property>
@@ -1317,7 +1317,7 @@
 						  <child>
 						    <widget class="GtkButton" id="button_edit_selected_jump_rj">
 						      <property name="visible">True</property>
-						      <property name="tooltip" translatable="yes">Editar salto seleccionado</property>
+						      <property name="tooltip" translatable="yes">Edit selected jump</property>
 						      <property name="can_focus">True</property>
 						      <property name="relief">GTK_RELIEF_NORMAL</property>
 						      <property name="focus_on_click">True</property>
@@ -1345,7 +1345,7 @@
 						  <child>
 						    <widget class="GtkButton" id="button_delete_selected_jump_rj">
 						      <property name="visible">True</property>
-						      <property name="tooltip" translatable="yes">Borrar salto seleccionado</property>
+						      <property name="tooltip" translatable="yes">Delete selected jump</property>
 						      <property name="can_focus">True</property>
 						      <property name="relief">GTK_RELIEF_NORMAL</property>
 						      <property name="focus_on_click">True</property>
@@ -1846,7 +1846,7 @@ sex</property>
 				  <child>
 				    <widget class="GtkTextView" id="textview_enunciate">
 				      <property name="visible">True</property>
-				      <property name="tooltip" translatable="yes">Enunciado del estadístico</property>
+				      <property name="tooltip" translatable="yes">statistic's enunciate</property>
 				      <property name="editable">False</property>
 				      <property name="overwrite">True</property>
 				      <property name="accepts_tab">False</property>
@@ -2276,7 +2276,7 @@ comments</property>
 	  <child>
 	    <widget class="GtkLabel" id="label50">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Born date: 
+	      <property name="label" translatable="yes">Born: 
 DD/MM/AAAA</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
@@ -2944,7 +2944,7 @@ DD/MM/AAAA</property>
 		      <child>
 			<widget class="GtkLabel" id="label34">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Recuperar</property>
+			  <property name="label" translatable="yes">Load</property>
 			  <property name="use_underline">True</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -3291,7 +3291,7 @@ for the following squat jump</property>
 		<widget class="GtkRadioButton" id="radiobutton_kg">
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">Kg</property>
+		  <property name="label" translatable="no">Kg</property>
 		  <property name="use_underline">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="focus_on_click">True</property>
@@ -3312,7 +3312,7 @@ for the following squat jump</property>
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="label" translatable="yes">% body 
-weightl</property>
+weight</property>
 		  <property name="use_underline">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="focus_on_click">True</property>
