--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -973,6 +973,64 @@
 					      <property name="spacing">0</property>
 
 					      <child>
+						<widget class="GtkButton" id="button_tv_expand">
+						  <property name="visible">True</property>
+						  <property name="tooltip" translatable="yes">Expand all</property>
+						  <property name="can_focus">True</property>
+						  <property name="relief">GTK_RELIEF_NORMAL</property>
+						  <property name="focus_on_click">True</property>
+						  <signal name="clicked" handler="on_button_tv_expand_clicked" last_modification_time="Sun, 13 Feb 2005 16:00:22 GMT"/>
+
+						  <child>
+						    <widget class="GtkImage" id="image333">
+						      <property name="visible">True</property>
+						      <property name="stock">gtk-zoom-in</property>
+						      <property name="icon_size">4</property>
+						      <property name="xalign">0.5</property>
+						      <property name="yalign">0.5</property>
+						      <property name="xpad">0</property>
+						      <property name="ypad">0</property>
+						    </widget>
+						  </child>
+						</widget>
+						<packing>
+						  <property name="padding">0</property>
+						  <property name="expand">False</property>
+						  <property name="fill">False</property>
+						  <property name="pack_type">GTK_PACK_END</property>
+						</packing>
+					      </child>
+
+					      <child>
+						<widget class="GtkButton" id="button_tv_collapse">
+						  <property name="visible">True</property>
+						  <property name="tooltip" translatable="yes">Collapse all</property>
+						  <property name="can_focus">True</property>
+						  <property name="relief">GTK_RELIEF_NORMAL</property>
+						  <property name="focus_on_click">True</property>
+						  <signal name="clicked" handler="on_button_tv_collapse_clicked" last_modification_time="Sun, 13 Feb 2005 15:56:05 GMT"/>
+
+						  <child>
+						    <widget class="GtkImage" id="image330">
+						      <property name="visible">True</property>
+						      <property name="stock">gtk-zoom-out</property>
+						      <property name="icon_size">4</property>
+						      <property name="xalign">0.5</property>
+						      <property name="yalign">0.5</property>
+						      <property name="xpad">0</property>
+						      <property name="ypad">0</property>
+						    </widget>
+						  </child>
+						</widget>
+						<packing>
+						  <property name="padding">0</property>
+						  <property name="expand">False</property>
+						  <property name="fill">False</property>
+						  <property name="pack_type">GTK_PACK_END</property>
+						</packing>
+					      </child>
+
+					      <child>
 						<widget class="GtkCheckButton" id="checkbutton_sort_by_type">
 						  <property name="visible">True</property>
 						  <property name="can_focus">True</property>
@@ -1215,9 +1273,6 @@
 						      <property name="rules_hint">True</property>
 						      <property name="reorderable">False</property>
 						      <property name="enable_search">False</property>
-						      <signal name="row_collapsed" handler="on_treeview_jumps_row_collapsed" last_modification_time="Tue, 05 Oct 2004 09:50:43 GMT"/>
-						      <signal name="cursor_changed" handler="on_treeview_jumps_cursor_changed" last_modification_time="Sun, 17 Oct 2004 12:02:18 GMT"/>
-						      <signal name="row_expanded" handler="on_treeview_jumps_row_expanded" last_modification_time="Sun, 17 Oct 2004 12:01:43 GMT"/>
 						    </widget>
 						  </child>
 						</widget>
@@ -1248,18 +1303,115 @@
 					  <property name="spacing">0</property>
 
 					  <child>
-					    <widget class="GtkLabel" id="label65">
+					    <widget class="GtkHBox" id="hbox56">
 					      <property name="visible">True</property>
-					      <property name="label" translatable="yes">Reactive jumps (RJs):</property>
-					      <property name="use_underline">False</property>
-					      <property name="use_markup">False</property>
-					      <property name="justify">GTK_JUSTIFY_LEFT</property>
-					      <property name="wrap">False</property>
-					      <property name="selectable">False</property>
-					      <property name="xalign">0.5</property>
-					      <property name="yalign">0.5</property>
-					      <property name="xpad">0</property>
-					      <property name="ypad">0</property>
+					      <property name="homogeneous">False</property>
+					      <property name="spacing">0</property>
+
+					      <child>
+						<widget class="GtkLabel" id="label65">
+						  <property name="visible">True</property>
+						  <property name="label" translatable="yes">Reactive jumps (RJs)</property>
+						  <property name="use_underline">False</property>
+						  <property name="use_markup">False</property>
+						  <property name="justify">GTK_JUSTIFY_LEFT</property>
+						  <property name="wrap">False</property>
+						  <property name="selectable">False</property>
+						  <property name="xalign">0.5</property>
+						  <property name="yalign">0.5</property>
+						  <property name="xpad">0</property>
+						  <property name="ypad">0</property>
+						</widget>
+						<packing>
+						  <property name="padding">0</property>
+						  <property name="expand">True</property>
+						  <property name="fill">False</property>
+						</packing>
+					      </child>
+
+					      <child>
+						<widget class="GtkButton" id="button_tv_rj_collapse">
+						  <property name="visible">True</property>
+						  <property name="tooltip" translatable="yes">Collapse all</property>
+						  <property name="can_focus">True</property>
+						  <property name="relief">GTK_RELIEF_NORMAL</property>
+						  <property name="focus_on_click">True</property>
+						  <signal name="clicked" handler="on_button_tv_rj_collapse_clicked" last_modification_time="Sun, 13 Feb 2005 16:01:36 GMT"/>
+
+						  <child>
+						    <widget class="GtkImage" id="image332">
+						      <property name="visible">True</property>
+						      <property name="stock">gtk-zoom-out</property>
+						      <property name="icon_size">4</property>
+						      <property name="xalign">0.5</property>
+						      <property name="yalign">0.5</property>
+						      <property name="xpad">0</property>
+						      <property name="ypad">0</property>
+						    </widget>
+						  </child>
+						</widget>
+						<packing>
+						  <property name="padding">0</property>
+						  <property name="expand">False</property>
+						  <property name="fill">False</property>
+						</packing>
+					      </child>
+
+					      <child>
+						<widget class="GtkButton" id="button_tv_rj_optimal">
+						  <property name="visible">True</property>
+						  <property name="tooltip" translatable="yes">Optimal expand</property>
+						  <property name="can_focus">True</property>
+						  <property name="relief">GTK_RELIEF_NORMAL</property>
+						  <property name="focus_on_click">True</property>
+						  <signal name="clicked" handler="on_button_tv_rj_optimal_clicked" last_modification_time="Sun, 13 Feb 2005 16:03:48 GMT"/>
+
+						  <child>
+						    <widget class="GtkImage" id="image335">
+						      <property name="visible">True</property>
+						      <property name="stock">gtk-zoom-fit</property>
+						      <property name="icon_size">4</property>
+						      <property name="xalign">0.5</property>
+						      <property name="yalign">0.5</property>
+						      <property name="xpad">0</property>
+						      <property name="ypad">0</property>
+						    </widget>
+						  </child>
+						</widget>
+						<packing>
+						  <property name="padding">0</property>
+						  <property name="expand">False</property>
+						  <property name="fill">False</property>
+						</packing>
+					      </child>
+
+					      <child>
+						<widget class="GtkButton" id="button_tv_rj_expand">
+						  <property name="visible">True</property>
+						  <property name="tooltip" translatable="yes">Expand all</property>
+						  <property name="can_focus">True</property>
+						  <property name="relief">GTK_RELIEF_NORMAL</property>
+						  <property name="focus_on_click">True</property>
+						  <signal name="clicked" handler="on_button_tv_rj_expand_clicked" last_modification_time="Sun, 13 Feb 2005 16:02:37 GMT"/>
+
+						  <child>
+						    <widget class="GtkImage" id="image334">
+						      <property name="visible">True</property>
+						      <property name="stock">gtk-zoom-in</property>
+						      <property name="icon_size">4</property>
+						      <property name="xalign">0.5</property>
+						      <property name="yalign">0.5</property>
+						      <property name="xpad">0</property>
+						      <property name="ypad">0</property>
+						    </widget>
+						  </child>
+						</widget>
+						<packing>
+						  <property name="padding">0</property>
+						  <property name="expand">False</property>
+						  <property name="fill">False</property>
+						</packing>
+					      </child>
 					    </widget>
 					    <packing>
 					      <property name="padding">0</property>
@@ -1377,9 +1529,6 @@
 						      <property name="rules_hint">False</property>
 						      <property name="reorderable">False</property>
 						      <property name="enable_search">True</property>
-						      <signal name="row_collapsed" handler="on_treeview_jumps_rj_row_collapsed" last_modification_time="Sun, 07 Nov 2004 19:11:56 GMT"/>
-						      <signal name="cursor_changed" handler="on_treeview_jumps_rj_cursor_changed" last_modification_time="Sun, 07 Nov 2004 19:12:16 GMT"/>
-						      <signal name="row_expanded" handler="on_treeview_jumps_rj_row_expanded" last_modification_time="Sun, 07 Nov 2004 19:12:36 GMT"/>
 						    </widget>
 						  </child>
 						</widget>
