--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -2586,7 +2586,8 @@ comments</property>
 	      <property name="snap_to_ticks">False</property>
 	      <property name="wrap">False</property>
 	      <property name="adjustment">0 0 300 1 10 10</property>
-	      <signal name="changed" handler="on_entries_required_changed" last_modification_time="Sat, 05 Feb 2005 10:22:36 GMT"/>
+	      <signal name="activate" handler="on_entries_required_changed" last_modification_time="Mon, 14 Feb 2005 17:50:24 GMT"/>
+	      <signal name="value_changed" handler="on_entries_required_changed" last_modification_time="Mon, 14 Feb 2005 17:50:38 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="left_attach">1</property>
