normal jumps and fall jumps now managed by new chronopic module (reactive jumps pending)
included chronopic.o chronopic.cs test-saltos.mono.cs temporarily
while we have not a good way of installing the two modules

--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -6,6 +6,7 @@
 <requires lib="bonobo"/>
 
 <widget class="GnomeApp" id="app1">
+  <property name="width_request">640</property>
   <property name="height_request">480</property>
   <property name="visible">True</property>
   <property name="title" translatable="yes">ChronoJump</property>
