--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -6,7 +6,7 @@
 <requires lib="bonobo"/>
 
 <widget class="GnomeApp" id="app1">
-  <property name="width_request">640</property>
+  <property name="width_request">700</property>
   <property name="height_request">480</property>
   <property name="visible">True</property>
   <property name="title" translatable="yes">ChronoJump</property>
@@ -4142,9 +4142,9 @@ weight</property>
 	      <property name="climb_rate">0</property>
 	      <property name="digits">1</property>
 	      <property name="numeric">True</property>
-	      <property name="update_policy">GTK_UPDATE_ALWAYS</property>
-	      <property name="snap_to_ticks">False</property>
-	      <property name="wrap">False</property>
+	      <property name="update_policy">GTK_UPDATE_IF_VALID</property>
+	      <property name="snap_to_ticks">True</property>
+	      <property name="wrap">True</property>
 	      <property name="adjustment">10 0 100 0.5 10 10</property>
 	    </widget>
 	    <packing>
