--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -1714,7 +1714,7 @@
 			      <child>
 				<widget class="GtkTable" id="table6">
 				  <property name="visible">True</property>
-				  <property name="n_rows">1</property>
+				  <property name="n_rows">2</property>
 				  <property name="n_columns">2</property>
 				  <property name="homogeneous">False</property>
 				  <property name="row_spacing">0</property>
@@ -1723,7 +1723,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="label69">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">statistic</property>
+				      <property name="label" translatable="yes">category</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1745,6 +1745,50 @@
 				  </child>
 
 				  <child>
+				    <widget class="GtkLabel" id="label95">
+				      <property name="visible">True</property>
+				      <property name="label" translatable="yes">statistic</property>
+				      <property name="use_underline">False</property>
+				      <property name="use_markup">False</property>
+				      <property name="justify">GTK_JUSTIFY_LEFT</property>
+				      <property name="wrap">False</property>
+				      <property name="selectable">False</property>
+				      <property name="xalign">0</property>
+				      <property name="yalign">0.5</property>
+				      <property name="xpad">0</property>
+				      <property name="ypad">0</property>
+				    </widget>
+				    <packing>
+				      <property name="left_attach">0</property>
+				      <property name="right_attach">1</property>
+				      <property name="top_attach">1</property>
+				      <property name="bottom_attach">2</property>
+				      <property name="x_options">fill</property>
+				      <property name="y_options"></property>
+				    </packing>
+				  </child>
+
+				  <child>
+				    <widget class="GtkHBox" id="hbox_combo_stats_stat_name2">
+				      <property name="visible">True</property>
+				      <property name="homogeneous">False</property>
+				      <property name="spacing">0</property>
+
+				      <child>
+					<placeholder/>
+				      </child>
+				    </widget>
+				    <packing>
+				      <property name="left_attach">1</property>
+				      <property name="right_attach">2</property>
+				      <property name="top_attach">1</property>
+				      <property name="bottom_attach">2</property>
+				      <property name="x_options">fill</property>
+				      <property name="y_options">fill</property>
+				    </packing>
+				  </child>
+
+				  <child>
 				    <widget class="GtkHBox" id="hbox_combo_stats_stat_name">
 				      <property name="visible">True</property>
 				      <property name="homogeneous">False</property>
@@ -1759,8 +1803,8 @@
 				      <property name="right_attach">2</property>
 				      <property name="top_attach">0</property>
 				      <property name="bottom_attach">1</property>
-				      <property name="x_options">fill</property>
-				      <property name="y_options">fill</property>
+				      <property name="x_options"></property>
+				      <property name="y_options"></property>
 				    </packing>
 				  </child>
 				</widget>
