--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -7578,6 +7578,7 @@ options</property>
 		      <child>
 			<widget class="GtkButton" id="button_stats_select_sessions">
 			  <property name="visible">True</property>
+			  <property name="sensitive">False</property>
 			  <property name="can_focus">True</property>
 			  <property name="label" translatable="yes">select</property>
 			  <property name="use_underline">True</property>
